...
            "state" : "translated",
            "value" : "關聯賬戶不屬於當前賬本"
          }
        }
      }
    },
    "关闭" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
...
            "state" : "translated",
            "value" : "取出金額不能超過當前已分配金額"
          }
        }
      }
    },
    "取消" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
            "state" : "translated",
            "value" : "統一日期"
          }
        }
      }
    },
    "统计" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Statistics"
          }
...
            "state" : "translated",
            "value" : "記錄退款"
          }
        }
      }
    },
    "记账" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recording"
...
